--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -14,7 +16,7 @@ html {
 }
 
 body {
-  --notion-font: 'monospace';
+  --notion-font: 'Space Grotesk', sans-serif;
   font-family: var(--notion-font);
   overflow-x: hidden;
 }
